--- a/01_work/01_workDetails/style.css
+++ b/01_work/01_workDetails/style.css
@@ -146,6 +146,9 @@ nav{
 #thaHero{
     background-image: url("../../00_assets/projects/cases/heroImage/tha.svg");
 }
+#complHero{
+    background-image: url("../../00_assets/projects/cases/heroImage/compl.svg")
+}
 #csTitle{
     font-size: 4em;
     font-family: "Marcellus SC", serif;
@@ -191,6 +194,14 @@ ul{
     margin-top: 5%;
     margin-bottom: 5%;
 }
+.label{
+    font-weight: 300;
+    font-size: 4em;
+}
+.subhead{
+    color:rgba(0, 0, 0, 0.336);
+    font-weight: 600;
+}
 
 .desc{
     padding-left: 20vw;
@@ -199,6 +210,11 @@ ul{
 }
 .desc p{
     line-height: 200%;
+}
+
+.quotes p{
+    border-left: solid rgba(0, 0, 0, 0.336);
+    padding-left: 20px;
 }
 
 .viewing{
@@ -266,12 +282,12 @@ span.subhead{
     color:#C33948;
 }
 
-.slide{
+.elink{
     color:#0000EE;
     transition: .3s ease;
     cursor: pointer;
 }
-.slide:hover{
+.elink:hover{
     text-decoration: underline;
 }
 
@@ -317,6 +333,7 @@ footer{
     font-weight: 300;
 }
 .follow{
+    cursor: pointer;
     padding-top: 1%;
     width: 20%;
     display: flex;
@@ -387,6 +404,9 @@ footer{
     .desc{
         padding-left: 10vw;
         padding-right: 10vw;
+    }
+    .label{
+        font-size: 2em;
     }
     .process{
         display: none;
