--- a/03_design/style.css
+++ b/03_design/style.css
@@ -1,75 +1,3 @@
-/* NAV BEGIN */
-.navwrap{
-    z-index: 50;
-    width: 100%;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    background-color: #fff;
-}
-.navbar{
-    background-color: whitesmoke;
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    z-index: 50;
-
-    display:flex;
-    justify-content: space-evenly;
-    color: black;
-    text-align: center;
-    text-decoration: none;
-    top: -100px;
-    transition: top 0.3s;
-}
-  
-.myname a, .navbar a:not(.skip){
-    font-size: 18px;
-    cursor: pointer;
-    padding: 1%;
-}
-  
-.navbar a:not(.myname){
-    padding-left: 7%;
-    padding-right: 7%;
-    transition: background-color 0.3s ease-out;
-}
-
-.navbar a:hover:not(.myname,.skip){
-    color: whitesmoke;
-    background-color: black;
-}
-
-@media only screen and (min-width: 53px) and (max-width: 540px){
-    .skip {
-        display: none;
-    }
-
-    .navbar {
-        height: 50px;
-    }
-
-    .navbar a:not(.myname){
-        padding: 2%;
-        padding-top: 3%;
-    }
-
-    .myname a, .navbar a:not(.skip){
-        padding-top: 3%;
-        padding-bottom: 2%;
-        }
-    }
-    @media only screen and (min-width: 1440px) and (max-width: 5000px){
-    .myname a, .navbar a:not(.skip){
-        font-size: 20px;
-        }
-}
-/* NAV END */
-
-::selection {
-    background: rgb(247,75,91);
-}
-
 * {
     margin: 0;
     padding: 0;
@@ -78,7 +6,7 @@
     font-weight: bold;
 }
 
-a{
+a, li{
     all: unset;
 }
 
@@ -88,9 +16,125 @@ body{
     background-attachment: fixed;
 }
 
+::selection {
+    color: white;
+    background: #C33948;
+}
+
+/*NAVBAR*/
+nav{
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+    background-color: #c33949fa;
+    color: white;
+}
+nav a{
+    cursor: pointer;
+}
+#me_index{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(9%) saturate(7498%) hue-rotate(180deg) brightness(104%) contrast(116%);
+}
+#me_index:hover, .web a:hover{
+    letter-spacing: 0.5px;
+}
+.web{
+    display: flex;
+    width: 500px;
+    justify-content: space-evenly;
+}
+.web a{
+    padding: 2%;
+    border-bottom: white solid 2px;
+    transition: .3s ease;
+    border-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)) 1;
+}
+.web a:hover, #active, .web:hover #active:hover{
+    border-image: linear-gradient(to right, rgba(255, 255, 255, 0), white, rgba(255, 255, 255, 0)) 1;
+}
+.web:hover #active{
+    border-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)) 1;
+}
+.mob{
+    display: none;
+}
+.mobNav{
+    position: absolute;
+    width: 100%;
+    height: 70vh;
+    left: 0;
+    padding: 0;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+    font-size: 1.5rem;
+    z-index: -1;
+    padding-top: 200px;
+    display: none;
+    background-color: #C33948;
+}
+.mobNav a{
+    width: 30vh;
+    padding: 2%;
+    border: solid 2px;
+    transition: .3s ease;
+    background-color: white;
+    border-radius: 12px;
+}
+
+/* nav animations */
+@keyframes expand{
+    from {}
+    to {transform: translateY(-200px)}
+}
+@keyframes close{
+    from {transform: translateY(-200px)}
+    to {transform: translateY(-700px)}
+}
+/* nav responsive */
+@media screen and (max-width:858px){
+    .web{
+        justify-content: end;
+    }
+    .web a{
+        display: none;
+    }
+    .mob{
+        display: block;
+        margin: 3%;
+    }
+    #mobIcon{
+        filter: brightness(0) saturate(100%) invert(100%) sepia(9%) saturate(7498%) hue-rotate(180deg) brightness(104%) contrast(116%);
+        cursor: pointer;
+    }
+    .mobNav{
+        display: flex;
+        transform: translateY(-710px);
+        color: black;
+    }
+    .mobNav:hover #mobActive{
+        background-color:white;
+        color: black;
+    }
+    .mobNav a:hover, #mobActive, .mobNav:hover #mobActive:hover{
+        background-color:black;
+        border-color: black;
+        color: white;
+    }
+    #me_index:hover, .web a:hover{
+        letter-spacing: 0px;
+    }
+}
+/* NAVBAR */
+
 .title{
     text-align: center;
-    padding-top: 2%;
+    padding-top: 15vh;
     padding-bottom: 2%;
     color: rgb(0, 0, 0);
     opacity: 0%;
@@ -109,10 +153,6 @@ body{
 @keyframes artshow{
     from {opacity: 0%;; transform: translateY(20px);}
     to {opacity: 100%;}
-}
-
-body{
-    margin: 0%;
 }
 
 .cover{
@@ -453,4 +493,86 @@ body{
     .name{
         font-size: 20px;
     }
+}
+
+/* footer */
+footer{
+    background-color: #C33948;
+    color: white;
+    font-family: "Work Sans", "serif";
+    height: fit-content;
+    padding-top: 2%;
+    padding-left: 2%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+footer a{
+    cursor: pointer;
+}
+#foot img{
+    filter: brightness(0) saturate(100%) invert(100%) sepia(9%) saturate(7498%) hue-rotate(180deg) brightness(104%) contrast(116%);
+}
+#email{
+    text-align: left;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    font-weight: 200;
+}
+#cr{
+    text-align: right;
+    padding-right: 2%;
+    font-weight: 200;
+}
+#followUp{
+    font-size: 1.5em;
+    text-align: left;
+    font-weight: 300;
+}
+.follow{
+    padding-top: 1%;
+    width: 20%;
+    display: flex;
+    justify-content: space-between;
+}
+.follow a{
+    transition: .3s ease;
+}
+.follow a:hover{
+    transform: scale(110%);
+}
+.follow img{
+    width: 2em;
+}
+#up1{
+    animation: t1 5s infinite ease-in-out;
+} 
+#up2{
+    animation: t2 5s infinite ease-in-out;
+}
+#up3{
+    animation: t3 5s infinite ease-in-out;
+} 
+
+/* animations */
+@keyframes t1{
+    from {transform: translateY(0px);}
+    10% {transform: translateY(-5px);}
+    20% {transform: translateY(0px);}
+    30% {}
+    to {}
+}
+@keyframes t2{
+    from {}
+    10% {transform: translateY(0px);}
+    20% {transform: translateY(-5px);}
+    30% {transform: translateY(0px);}
+    to {}
+}
+@keyframes t3{
+    from {}
+    10% {}
+    20% {transform: translateY(0px);}
+    30% {transform: translateY(-5px);}
+    40% {transform: translateY(0px);}
 }
