--- a/01_work/style.css
+++ b/01_work/style.css
@@ -260,7 +260,7 @@ nav{
     width: 100%;
     cursor: pointer;
 }
-.caseCover:hover{
+.caseCover:hover:not(.wip){
     transform: scale(102%);
 }
 .viewImage{
@@ -292,6 +292,24 @@ nav{
     visibility: visible;
     opacity: 100%;
     box-shadow: rgba(0, 0, 0, 0.116) 0px 5px 5px;
+}
+
+/* WIP */
+.wip {
+    cursor: not-allowed;
+}
+.cantView{
+    position: absolute;
+    top: 0;
+    bottom:0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.856);
+    color: black;
+    padding: 5% 0%;
+    display: flex;
+    width: 10%;
+    align-self: center;
+    cursor: not-allowed;
 }
 
 /* footer */
